Oppgave 1 prototype mangler å finne de neste verdiene som ikke er null